<resources>
    <string name="app_name">EMA</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="what_is_your_level_of_fatigue">What is your level of fatigue?</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="title_activity_third_page">ThirdPage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="are_you_exercising">Are you exercising?</string>
    <string name="n">N</string>
    <string name="y">Y</string>
    <string name="are_you_having_a_hot_flush_now">Are you having a hot flush now?</string>
    <string name="how_much_are_you_bothered_by_this_symptom_n_0_not_at_all_4_extremely">How much are you bothered by this symptom?\n(0=not at all, 4=extremely)</string>
    <string name="_0">0</string>
    <string name="title_activity_fourth">Fourth</string>
    <string name="what_is_your_level_of_pain_n_0_none_10_extreme">what is your level of pain right now? (1=none, 10=extreme)</string>
    <string name="title_activity_fifth_page">FifthPage</string>
    <string name="what_is_your_level_of_fatigue_right_now_n_0_none_10_extreme">what is your level of fatigue right now? (1=none, 10=extreme)</string>
    <string name="title_activity_sixth_page">SixthPage</string>
    <string name="are_you_experiencing_a_stressful_event">Are you experiencing a stressful event?</string>
    <string name="title_activity_seventh_page">SeventhPage</string>
    <string name="how_unpleasant_is_the_stressful_event_n_0_not_at_all_10_extreme">How unpleasant is the stressful event? (1=not at all, 10=extreme)</string>
    <string name="title_activity_eighth">Eighth</string>
    <string name="title_activity_eighth_page">EighthPage</string>
    <string name="how_anxious_do_you_feel_right_now_n_0_not_at_all_10_extreme">How anxious do you feel right now? (1=not at all, 10=extreme)</string>
    <string name="thanks">Thanks</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
</resources>