<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="15dp"
    tools:context=".SixthPage"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="31dp"
            android:layout_height="30dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:fitsSystemWindows="true"
            android:background="@drawable/round_button"
            android:text="@string/n"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.686"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.661" />

        <TextView
            android:id="@+id/text"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/are_you_experiencing_a_stressful_event"
            android:textAlignment="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

        <Button
            android:id="@+id/button1"
            android:layout_width="31dp"
            android:layout_height="30dp"
            android:background="@drawable/round_button"
            android:text="@string/y"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.295"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.659" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>